--- a/mysite/home/templates/ads/ad_detail.html
+++ b/mysite/home/templates/ads/ad_detail.html
@@ -34,11 +34,36 @@
     onclick="document.getElementById('overlay').style.display = 'block';">
 {% endif %}
 <p>
-{{ ad.text }}
+    {{ ad.text }}
 </p>
 <p>
     {{ ad.price }}
 </p>
+<p>
+{% if user.is_authenticated %}
+<br clear="all"/>
+<p>
+{% load crispy_forms_tags %}
+<form method="post" action="{% url 'forums:forum_comment_create' ad.id %}">
+    {% csrf_token %}
+    {{ comment_form|crispy }}
+<input type="submit" value="Submit">
+<input type="submit" value="All Forums" onclick="window.location.href='{% url 'ads:all' %}';return false;">
+</form>
+</p>
+{% endif %}
+{% if comments %}
+{% for comment in comments %}
+        {{ comment.text }}
+        {% if comment.owner == user %}
+        <a href="{% url 'ads:ad_delete' comment.id %}">Delete</a>)
+        {% endif %}
+{% endfor %}
+</p>
+{% else %}
+  <p>There are no comments in the database.</p>
+{% endif %}
+
 <p>
 <a href="{% url 'ads:all' %}">All ads</a>
 </p>
